<resources>
    <string name="app_name">Movies</string>

    <!--used to fill text views in XMLs to test layout and positioning-->
    <string name="placeholder">Placeholder</string>

    <!--to get full size backdrops for details screen-->
    <string name="image_url_format_original">http://image.tmdb.org/t/p/original%1$s</string>
    <!--to get posters with 500 width for main screen-->
    <string name="image_url_format_w500">http://image.tmdb.org/t/p/w500%1$s</string>
    <!--to get posters with smaller width for details screen-->
    <string name="image_url_format_w300">http://image.tmdb.org/t/p/w300%1$s</string>

    <!--save and restore current listing type to preferences-->
    <string name="perf_sort_type_key">com.afterapps.movies.perfSortTypeKey</string>
    <string name="perf_sort_type_default">popularity.desc</string>

    <!--API key-->
    <!--TODO remove API key before submitting!-->
    <!--TODO: insert API key here-->
    <string name="api_key">12345</string>

    <string name="action_settings">Settings</string>
    <string name="error_getting_id">Error loading movie</string>
    <string name="details_caption_format">Released %1$s\nVote average: %2$s</string>
    <string name="details_card_title_summary">Summary</string>
    <string name="action_sort">Sort</string>
    <string name="sort_dialog_title">Pick sorting type</string>
    <string name="favorite_message_removed">Removed from favorites!</string>
    <string name="favorite_message_added">Added to favorites!</string>
    <string name="fragment_main_tag">FragmentMainTag</string>
    <string name="fragment_details_tag">FragmentDetailsTag</string>

    <!--to get full resolution youtube thumbnail for videos-->
    <string name="youtube_thumbnail_format">http://img.youtube.com/vi/%1$s/maxresdefault.jpg</string>

    <string name="details_title_videos">Videos</string>
    <string name="details_title_reviews">Reviews</string>

    <!--youtube URL that launches on video click-->
    <string name="youtube_url_format">http://www.youtube.com/watch?v=%1$s</string>

    <!--toast that's displayed when trying to display an empty list of favorites-->
    <string name="empty_favorite_toast">No favorite movies; switching to popular</string>

    <!--title for Android's native select app dialog/screen-->
    <string name="share_video_message_format">Share %1$s!</string>

    <!--formatting youtube shortened link along with video title and type for sharing-->
    <string name="share_video_format">
        %1$s | %2$s\n\nyoutu.be/%3$s
    </string>

    <!--formatting TMDb link and movie title for sharing-->
    <string name="share_movie_format">
        %1$s\n\nthemoviedb.org/movie/%2$s
    </string>

    <!--formatting IMDB link for opening in browser-->
    <string name="imdb_person_url_format">http://www.imdb.com/name/%1$s</string>

    <string name="details_cast_title">Cast</string>
    <string name="person_card_title_born">Born</string>
    <string name="person_card_title_biography">Biography</string>
    <string name="person_title_known_for">Known for</string>
    <string name="not_available">Not available</string>
    <string name="person_details_network_failure">Can\'t access actor details</string>

</resources>