<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/person_details_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:scrollbars="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants">

        <ProgressBar
            android:id="@+id/person_details_progress_bar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/person_details_bottom_sheet_content_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/bottom_sheet_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/person_details_profile_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/person_details_profile_placeholder"
                    tools:ignore="ContentDescription" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="@dimen/bottom_sheet_padding"
                    android:paddingEnd="@dimen/bottom_sheet_padding">

                    <TextView
                        android:id="@+id/person_details_name_text_view"
                        style="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text="@string/placeholder"
                        android:textColor="@color/primary_text" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/person_details_name_text_view"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-medium"
                            android:gravity="center"
                            android:text="@string/person_card_title_born"
                            tools:targetApi="jelly_bean" />

                        <TextView
                            android:id="@+id/person_birth_date_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/body_text_top_margin"
                            android:textColor="@color/primary_text" />

                        <TextView
                            android:id="@+id/person_birth_place_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primary_text" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/person_details_imdb_logo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:src="@drawable/imdb_logo"
                        tools:ignore="ContentDescription" />


                </RelativeLayout>

            </LinearLayout>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/body_text_top_margin"
                android:paddingTop="@dimen/body_text_top_margin"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp"
                card_view:cardUseCompatPadding="true"
                card_view:contentPadding="@dimen/card_view_content_padding">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/person_card_title_biography"
                        tools:targetApi="jelly_bean" />

                    <TextView
                        android:id="@+id/person_biography_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/body_text_top_margin"
                        android:textColor="@color/primary_text" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:id="@+id/person_details_known_for_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="?attr/listPreferredItemHeightSmall"
                    android:clickable="false"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_vertical"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:text="@string/person_title_known_for" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/person_details_known_for_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/cast_member_item_height"
                    android:isScrollContainer="true"
                    android:orientation="horizontal"
                    android:overScrollMode="never"
                    android:scrollbars="none" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>
