<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_coordinator_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/details_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="vertical"
        tools:context="com.afterapps.movies.fragments.FragmentDetails">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="blocksDescendants"
            android:orientation="vertical">

            <android.support.design.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/details_backdrop_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/details_content_top_margin"
                    android:adjustViewBounds="true"
                    android:background="@color/primary_text"
                    android:src="@drawable/backdrop_placeholder"
                    tools:ignore="ContentDescription" />

                <RelativeLayout
                    android:id="@+id/poster_fab_title_parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    app:layout_anchor="@id/details_backdrop_image_view"
                    app:layout_anchorGravity="bottom">

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/details_fab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="@dimen/fab_margin"
                        android:src="@drawable/ic_favorite_false"
                        app:elevation="2dp"
                        tools:ignore="RtlHardcoded" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/share_fab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_below="@id/details_fab"
                        android:layout_marginEnd="@dimen/mini_fab_end_margin"
                        android:layout_marginTop="@dimen/mini_fab_top_margin"
                        android:src="@drawable/ic_share"
                        app:elevation="2dp"
                        app:fabSize="mini" />

                    <ImageView
                        android:id="@+id/details_poster_image_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_margin="@dimen/fab_margin"
                        android:src="@drawable/poster_placeholder_small"
                        tools:ignore="ContentDescription" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/details_poster_image_view"
                        android:layout_toEndOf="@+id/details_poster_image_view"
                        android:layout_toStartOf="@id/details_fab"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/details_title_text_view"
                            style="@style/TextAppearance.AppCompat.Title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:lines="1"
                            android:text="@string/placeholder"
                            android:textColor="@color/primary_text" />

                        <TextView
                            android:id="@+id/details_caption_text_view"
                            style="@style/TextAppearance.AppCompat.Caption"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/details_caption_margin_top"
                            android:lines="2"
                            android:text="@string/placeholder"
                            android:textColor="@color/secondary_text" />

                    </LinearLayout>

                </RelativeLayout>

            </android.support.design.widget.CoordinatorLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/nested_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical">


                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/card_view_padding_top"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="2dp"
                    card_view:cardUseCompatPadding="true"
                    card_view:contentPadding="@dimen/card_view_content_padding">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/details_card_title_summary"
                            tools:targetApi="jelly_bean" />

                        <TextView
                            android:id="@+id/details_overview_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/body_text_top_margin"
                            android:text="@string/placeholder"
                            android:textColor="@color/primary_text" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="?attr/listPreferredItemHeightSmall"
                    android:clickable="false"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_vertical"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:text="@string/details_cast_title"
                    tools:targetApi="jelly_bean" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/cast_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/cast_member_item_height"
                    android:isScrollContainer="true"
                    android:orientation="horizontal"
                    android:overScrollMode="never"
                    android:scrollbars="none" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/videos_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:overScrollMode="never" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/reviews_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:isScrollContainer="true"
                    android:nestedScrollingEnabled="false"
                    android:overScrollMode="never"
                    android:scrollbars="none" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
